--- a/index.html
+++ b/index.html
@@ -15,10 +15,16 @@
       </script>
       <link href="style.css" rel="stylesheet" />
       <link rel="icon" type="image/png" href="favicon.png">
-      <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Montserrat+Subrayada" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Homemade+Apple" rel="stylesheet">
       <style>
         body {
           font-family: 'Montserrat';
+        }        
+        #islands-map {
+            position: absolute;
+            left: 0px;
+            top: 0px;
+            width: 100%;
         }
         #status {
           position: fixed;
@@ -53,13 +59,13 @@
         }
         #game-title {
           position: fixed;
-          bottom: 5em;
+          top: 5em;
           left: 0px;
           right: 0px;
           text-align: center;
           font-size: 300%;
-          color: white;
-          font-family: 'Montserrat Subrayada';
+          color: black;
+          font-family: 'Homemade Apple';
           z-index: 500;
         }
       </style>
@@ -98,41 +104,9 @@ function showHideStarlane(name) {
 </head>
 <body>
 
-<div id="game-title">Starlanes</div>
+<div id="game-title">Enchanted Skies</div>
 
-<div id="canvas"></div>
-<div id="starlanes" class="panel">
-  <div id="alpha">
-    <div class="starlane-name" onclick="showHideStarlane('alpha')"><span id="alpha-bullet">&#9656;</span>Starlane Alpha</div>
-    <div id="starlane-alpha-details" class="starlane-details">
-      <span id="alpha-lyrion" class="clickable" onclick="window.makeStarActive(0)">Lyrion</span>
-      <span id="alpha-solara" class="clickable" onclick="window.makeStarActive(1)">Solara</span><br />
-      <span id="alpha-andromira" class="clickable" onclick="window.makeStarActive(2)">Andromira</span>
-      <span id="alpha-oranex" class="clickable" onclick="window.makeStarActive(3)">Oranex</span>
-    </div>
-  </div>
-  <div id="beta">
-    <div class="starlane-name" onclick="showHideStarlane('beta')"><span id="beta-bullet">&#9656;</span>Starlane Beta</div>
-    <div id="starlane-beta-details" class="starlane-details">
-      <span id="beta-centoris" class="clickable" onclick="window.makeStarActive(4)">Centoris</span>
-      <span id="beta-dracosen" class="clickable" onclick="window.makeStarActive(5)">Dracosen</span>
-      <span id="beta-aurora" class="clickable" onclick="window.makeStarActive(6)">Aurora</span>
-    </div>
-  </div>
-  <div id="gamma">
-    <div class="starlane-name" onclick="showHideStarlane('gamma')"><span id="gamma-bullet">&#9656;</span>Starlane Gamma</div>
-    <div id="starlane-gamma-details" class="starlane-details">
-      <span id="gamma-betelius" class="clickable" onclick="window.makeStarActive(7)">Betelius</span>
-      <span id="gamma-serpentus" class="clickable" onclick="window.makeStarActive(8)">Serpentus</span><br />
-      <span id="gamma-velerion" class="clickable" onclick="window.makeStarActive(9)">Velerion</span>
-      <span id="gamma-intaron" class="clickable" onclick="window.makeStarActive(10)">Intaron</span>
-    </div>
-  </div>
-  <div id="details"></div>
-</div>
-<div id="ddetails" class="panel"></div>
-
-<script type="module" src="/star-chart.mjs"></script>
+<a href="explore.html" target="_blank"><img src="islands_map.png" id="islands-map" /></a>
 
 </body>
 </html>
