--- a/explore.html
+++ b/explore.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Space Explorer</title>
+    <title>Enchanted Skies</title>
     <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
     <link href="style.css" rel="stylesheet" />
     <link href="menu.css" rel="stylesheet" />
